Added Address and lang

--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <h2>Experience</h3>
     <h4>Dairy Queen, McLeansboro, IL - Assistant Manager</h1>
         <p>Description</p>
+        <p>504 W Saint Charles Ave
+            McLeansboro, IL 62859
+            (618) 599-6125
+            Jamesnbunny98@gmail.com
+
+
+            LANGUAGES
+            English
+            Spanish
+
+            </p>
 </body>
 </html>
